[package]
name = "card"
version = "0.1.0"
license = "MIT"
authors = ["iammatthias <hey@iammatthias.com>"]
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"