[package]
name = "card"
version = "0.1.0"
license = "MIT"
authors = ["iammatthias <hey@iammatthias.com>"]
edition = "2021"
description = "cli business card"
repository = "https://github.com/iammatthias/card"

[lib]
crate-type = ["cdylib", "rlib"]
path = "./src/main.rs"

[dependencies]
ansi_term = "0.12.1"
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
wasm-bindgen = "0.2.0"
wasm-bindgen-futures = "0.4.28"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread", "sync"] } 
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"

[dev-dependencies]
wasm-bindgen-test = "0.2"